# inertia

./: README.md
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml  go.mod  go.sum  launch.sh  migrate.sh  scylla.yaml
api/cmd/inertia/: main.go
api/inertia-api-core/: Cargo.toml
api/inertia-api-core/src/: lib.rs
api/inertia-api-domain/: Cargo.toml
api/inertia-api-domain/src/user/: mod.rs  repository.rs  service.rs
api/inertia-api-resolvers/: Cargo.toml
api/inertia-api-resolvers/src/: health.rs  lib.rs  user.rs
api/inertia-api-services/: Cargo.toml
api/inertia-api-services/src/: lib.rs  session.rs  snowflakes.rs
api/inertia-api-services/src/user/: repository.rs  service.rs
api/internal/api/: api.go  auth.go  device.go  game.go  health.go  location.go  middleware.go  powerup.go  quest.go  team.go  user.go  utils.go  ws.go
api/internal/cmd/: api.go  root.go  worker.go
api/internal/domain/: access_token.go  account.go  device.go  game.go  live_activity.go  location.go  notification.go  oauth_code.go  powerup.go  quest.go  refresh_token.go  session.go  snowflake_nodes.go  stats.go  team.go  user.go
api/internal/repository/: access_token.go  account.go  game.go  game_invite.go  location.go  notifications.go  oauth_code.go  powerup.go  quest.go  refresh_token.go  session.go  stats.go  team.go  user.go  util.go
api/internal/worker/: notifications.go
api/legacy/: .env.example  fly.toml  go.mod
api/legacy/internal/api/: api.go  auth.go  location.go  quest.go  team.go
api/legacy/internal/cmd/: root.go
api/legacy/internal/domain/: game.go  game_invite.go  quest.go  snowflake_nodes.go  stats.go  team.go
api/legacy/internal/repository/: access_token.go  game.go  oauth_code.go  stats.go  team.go
api/legacy/migrations/: 20240120190832_create_users.up.sql  20240201093518_add_game_metadata.down.sql  20240201105654_create_teams.up.sql  20240203205655_add_team_invites.down.sql  20240203210055_add_display_names.down.sql  20240205082104_create_quests.up.sql  20240205094914_add_game_id.up.sql  20240207092004_create_stats.up.sql
api/migrations/: 00001_init.cql  00002_create_users.cql  00003_create_accounts.cql  20240120190832_create_users.up.sql  20240130133555_create_games.up.sql  20240201093518_add_game_metadata.up.sql  20240201105654_create_teams.down.sql  20240201105654_create_teams.up.sql  20240201120541_create_teams_users.down.sql  20240201120541_create_teams_users.up.sql  20240201142318_create_locations.down.sql  20240201142318_create_locations.up.sql  20240203205655_add_team_invites.up.sql  20240203210055_add_display_names.up.sql  20240205082104_create_quests.down.sql  20240205082104_create_quests.up.sql  20240205094914_add_game_id.down.sql  20240205094914_add_game_id.up.sql  20240207092004_create_stats.down.sql  20240207092004_create_stats.up.sql  20240411092024_create_devices.down.sql  20240411092024_create_devices.up.sql  20240411092700_create_accounts.up.sql  20240417065601_make_devices_unique.down.sql  20240417065601_make_devices_unique.up.sql  20240421102210_create_powerups.down.sql  20240421102210_create_powerups.up.sql  20240501152913_use_timezones_in_teams.down.sql  20240501152913_use_timezones_in_teams.up.sql  20240502130828_use_timezones_in_powerups.down.sql  20240502130828_use_timezones_in_powerups.up.sql
api/src/: main.rs
api/upstream/: .docker-compose.yml.swp  .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
api/upstream/inertia-api-core/: Cargo.toml
api/upstream/inertia-api-core/src/: lib.rs  state.rs
api/upstream/inertia-api-domain/: Cargo.toml
api/upstream/inertia-api-domain/src/: lib.rs
api/upstream/inertia-api-service/: Cargo.toml
api/upstream/inertia-api-service/.sqlx/: query-156585758c69b3bf8a892bf7f2a952957e9fca8f891b3e7cad114aac191fca30.json  query-305b59b33eb950727391b451cf2129c5b406b3afc35bae475705fbcd85379513.json  query-3881bc3292974094ab61ec0e64087a699d52cb2f1d26de2726384209a7d6cb14.json  query-557dcb86510a15632b65ca87fc34dbf93735ed29af8be42397778dd5e197c5c4.json  query-5a821e84dec640ca99b57d066b4987d4ce2e41610ed80839180a116e3adf2e78.json  query-5a9939b6881c1a054f6430ab00d9dbed179efce30932e1dd1c7a1371d668d98e.json  query-5af61a688481d0ce4c60ee317af7bf12afba29108fad09585a2e56225dd8c0c2.json  query-5f48864e341a9a737708273a818d4772c35170c1c074da800b313cd43f02ec99.json  query-6bc1721325a984cc9e51073cee9e5d84cd179c8cb4d0ce8f96522f587ee38a4c.json  query-7323b504237b0c6922e5ad6d91f222a139e492e8eab569dfe6d92391512aa39d.json  query-79b9cec670ecbfeae1f7705e53d05d94d18219282efcd5b36b3aa47ee03b7b60.json  query-8a7c4f8520076eec2aacc946656770976b2995019e799518e02cd7781c321451.json  query-8c7c6540bce4a0d28b478f2332ba40e7470915ac6404017eefef23191fa8feda.json  query-a70e4c25eaf20233903ceb4c1afc57f2f0960c6ee57401132fa548e137eeeb99.json  query-b4ff3403386412c1ff6ea016e289240a743e9ac616288868d0a69b0e6f6c254d.json  query-b94775b25a0163687eb8740353d8239b0d9609f834f24ff7d759fc476d0698ce.json  query-c3cb0acd16a18a88c504982b8de06adeb2af9fc84ff7f3508073992bb786ca99.json  query-d6766d5b517b0d7a78dda087b5cad564876a99bd1f03f1da8c79c829a4cf269d.json  query-d7245c42acc8f3bab1d748b205e6e587d34790521dc4935f4ff91a63affb7b53.json  query-e6e8392b35b394188f2edd003515c145d02b64780eb9674a44f6f7d0f13beb0b.json  query-e8ff4cff7d8c4b9e8ee469e50bb0b6d93b7107d9d44b3fa8a55c4834a79b0390.json  query-f45f815a4566cded13316706d97d12e4a75a20c3e10e81f8894f5a4613f97cdf.json  query-f903e083d653af5927b7087ee3d9e2a575bf6a2ea561fa2a3834e6a99c619089.json
api/upstream/inertia-api-service/migrations/: 0001_create_user.up.sql  0002_create_account.down.sql  0002_create_account.up.sql  0003_create_games.down.sql  0003_create_games.up.sql  0004_create_teams.down.sql  0004_create_teams.up.sql  0005_create_leaderboards.down.sql  0005_create_leaderboards.up.sql  0006_create_locations.down.sql  0006_create_locations.up.sql  0007_create_quests.down.sql  0007_create_quests.up.sql  0008_create_devices.down.sql  0008_create_devices.up.sql
api/upstream/inertia-api-service/src/: lib.rs  (+2 more)
api/upstream/src/: main.rs
(+150 files in other folders)
