[package]
name = "inertia-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["inertia-api-core", "inertia-api-resolvers", "inertia-api-domain", "inertia-api-services"]

[dependencies]
inertia-api-core = { path = "inertia-api-core" }
tokio = { version = "1", features = ["full"] }
