[package]
name = "inertia-api-resolvers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.5", features = ["time"] }
tokio = { version = "1.37.0", features = ["full"] }
inertia-api-domain = { path = "../inertia-api-domain" }
time = { version = "0.3.36", features = ["serde"] }
inertia-api-services = { path = "../inertia-api-services" }