[package]
name = "inertia-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["inertia-api-core", "inertia-api-domain", "inertia-api-service"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "forbid"
pedantic = "deny"
nursery = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
inertia-api-core = { path = "inertia-api-core" }
anyhow = "1.0.79"
dotenvy = "0.15.7"
time = { version = "0.3.34", features = ["serde", "serde-human-readable"] }
openssl = { version = "0.10", features = ["vendored"] }
