[package]
name = "inertia-api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
] }
tokio = { version = "1.36.0", features = ["full"] }
inertia-api-domain = { path = "../inertia-api-domain" }
inertia-api-service = { path = "../inertia-api-service" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "forbid"
pedantic = "deny"
nursery = "deny"
