[package]
name = "inertia-api-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["ws"] }
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "macros",
] }
tokio = { version = "1.36.0", features = ["full"] }
inertia-api-domain = { path = "../inertia-api-domain" }
inertia-api-service = { path = "../inertia-api-service" }
thiserror = "1.0.57"
redis = { version = "0.24.0", features = ["r2d2"] }
axum-extra = { version = "0.9.2", features = ["cookie"] }
rand = "0.8.5"
tracing = { version = "0.1.40", features = ["log"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tower = "0.4.13"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.114"
aide = { version = "0.13.3", features = ["redoc", "scalar", "axum", "axum-extra", "macros"] }
schemars = "0.8.16"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "forbid"
pedantic = "deny"
nursery = "deny"
