[package]
name = "inertia-api-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
time = { version = "0.3.34", features = ["serde"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "forbid"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
pedantic = "deny"
nursery = "deny"
