[package]
name = "inertia-api-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "time",
] }
inertia-api-domain = { path = "../inertia-api-domain" }
time = { version = "0.3.34", features = ["serde"] }
rs-snowflake = "0.6.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "forbid"
pedantic = "deny"
nursery = "deny"
